--- a/styles/material_light.css
+++ b/styles/material_light.css
@@ -185,10 +185,17 @@ span[style*="font-size:8pt"] * {
 }
 .post-block.code .toggle-btn {
   position: absolute;
+  padding: 0.5rem;
   right: 0;
+  top: 0;
+  cursor: pointer;
+}
+.post-block.code .toggle-btn span {
+  font-weight: bold;
+  color: #3490c3;
 }
 .post-block.code > .block-title {
-  margin: 0 5rem 0 0;
+  margin: 0 3rem 0 0;
   padding: 0.5rem;
   color: rgba(50, 38, 0, 0.75);
 }
